--- a/src/Room.css
+++ b/src/Room.css
@@ -1,5 +1,10 @@
+
 .room {
+    padding-top: 2%;
     height: 100vh;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 
 .lit{
@@ -10,4 +15,16 @@
 .dark{
     background: black;
     color: white;
+}
+button{
+    display: inline;
+    background: grey;
+    margin-right: 5px;
+    padding: 15px 25px;
+    font-size: 15px;
+    font-weight: 600;
+    cursor: pointer;
+}
+.on-off{
+    display: inline;
 }
